--- a/catalog-item.html
+++ b/catalog-item.html
@@ -50,25 +50,15 @@
         </figure>
       </section>
       <section class="about">
-          <ul>
-            <li>
-              Есть в наличии
-            </li>
-            <li>
-              Артикул:Dexter-ae
-            </li>
-          </ul>
-          <p>Travel kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. набор также может стать отличным подарком.</p>
+        <div class="available">
+          <p>Есть в наличии</p>
+          <p class="available-vencode">Артикул:Dexter-ae<p>
+        </div>
+        <p>Travel kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. набор также может стать отличным подарком.</p>
       </section>
       <section class="price">
-        <ul>
-          <li>
-            2900 руб.
-          </li>
-          <li>
-            <a class="buy" href="#buy1.html">Купить</a>
-          </li>
-        </ul>
+        <p>2900 руб.</p>
+        <a class="buy" href="#buy1.html">Купить</a>
       </section>
       <section class="features">
         <p>В набор входят:</p>
