--- a/catalog.html
+++ b/catalog.html
@@ -53,36 +53,18 @@
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
             <div class="filter-top">
               <b class="filter-name">Производители:</b><br>
-              <label>
-                <input type="checkbox" name="baxter" checked> Baxter of california
-              </label>
-              <label>
-                <input type="checkbox" name="mr"> Mr natty
-              </label>
-              <label>
-                <input type="checkbox" name="suavecito" checked> Suavecito
-              </label>
-              <label>
-                <input type="checkbox" name="malin"> Malin+goetz
-              </label>
-              <label>
-                <input type="checkbox" name="murray's"> Murray's
-              </label>
-              <label>
-                <input type="checkbox" name="american" checked> American crew
-              </label>
+              <input type="checkbox" name="baxter" id="baxter-id" checked><label for="baxter-id">Baxter of california</label>
+              <input type="checkbox" name="mr" id="mr-id"><label for="mr-id">Mr natty</label>
+              <input type="checkbox" name="suavecito" id="suavecito-id" checked><label for="suavecito-id">Suavecito</label>
+              <input type="checkbox" name="malin" id="malin-id"><label for="malin-id">Malin+goetz</label>
+              <input type="checkbox" name="murrays" id="murrays-id"><label for="murrays-id">Murray's</label>
+              <input type="checkbox" name="american" id="american-id" checked><label for="american-id">American crew</label>
             </div>
             <div class="filter-bottom">
               <b class="filter-name">Группы товаров:</b><br>
-              <label>
-                <input type="radio" name="group"> Бритвенные принадлежности
-              </label>
-              <label>
-                <input type="radio" name="group" checked> Средства для ухода
-              </label>
-              <label>
-               <input type="radio" name="group"> Аксессуары
-              </label>
+              <input type="radio" name="group" id="group1-id"><label for="group1-id">Бритвенные принадлежности</label>
+              <input type="radio" name="group" id="group2-id" checked><label for="group2-id">Средства для ухода</label>
+              <input type="radio" name="group" id="group3-id"><label for="group3-id">Аксессуары</label>
             </div>
             <button class="btn" type="submit">Показать</button>
           </form>
@@ -93,84 +75,60 @@
               <img src="img/naborboc.jpg" width="215" height="170" alt="Набор для путешествий Baxter of california">
             </figure>
             <a href="catalog-item.html">Набор для путешествий "Baxter of california"</a>
-            <ul>
-              <li>
-                2900 руб.
-              </li>
-              <li>
-                <a class="buy buy1" href="#buy1.html">Купить</a>
-              </li>
-            </ul>
+            <div class="price">
+                <p>2900 руб.</p>
+                <a class="price-buy1" href="#buy1.html">Купить</a>
+            </div>
           </article>
           <article class="item-two">
             <figure class="item-image">
               <img src="img/condboc.jpg" width="215" height="170" alt="Увлажняющий кондиционер Baxter of california">
             </figure>
             <a href="catalog-item2.html">Увлажняющий кондиционер "Baxter of california"</a>
-            <ul>
-              <li>
-                750 руб.
-              </li>
-              <li>
-                <a class="buy buy2" href="#buy2.html">Купить</a>
-              </li>
-            </ul>
+            <div class="price">
+                <p>750 руб.</p>
+                <a class="price-buy2" href="#buy2.html">Купить</a>
+            </div>
           </article>
           <article class="item-three">
             <figure class="item-image">
               <img src="img/gelsua.jpg" width="215" height="170" alt="Гель для волос Suavecito">
             </figure>
             <a href="catalog-item3.html">Гель для волос "Suavecito"</a>
-            <ul>
-              <li>
-                290 руб.
-              </li>
-              <li>
-                <a class="buy buy3" href="#buy3.html">Купить</a>
-              </li>
-            </ul>
+            <div class="price">
+                <p>290 руб.</p>
+                <a class="price-buy3" href="#buy3.html">Купить</a>
+            </div>
           </article>
           <article class="item-four">
             <figure class="item-image">
               <img src="img/glinaac.jpg" width="215" height="170" alt="Глина для укладки волос American crew">
             </figure>
             <a href="catalog-item4.html">Глина для укладки волос "American crew"</a>
-            <ul>
-              <li>
-                500 руб.
-              </li>
-              <li>
-                <a class="buy buy4" href="#buy4.html">Купить</a>
-              </li>
-            </ul>
+            <div class="price">
+                <p>500 руб.</p>
+                <a class="price-buy4" href="#buy4.html">Купить</a>
+            </div>
           </article>
           <article class="item-five">
             <figure class="item-image">
               <img src="img/gelac.jpg" width="215" height="170" alt="Гель для волос American crew">
             </figure>
             <a href="catalog-item5.html">Гель для волос "American crew"</a>
-            <ul>
-              <li>
-                300 руб.
-              </li>
-              <li>
-                <a class="buy buy5" href="#buy5.html">Купить</a>
-              </li>
-            </ul>
+            <div class="price">
+                <p>300 руб.</p>
+                <a class="price-buy5" href="#buy5.html">Купить</a>
+            </div>
           </article>
           <article class="item-six">
             <figure class="item-image">
               <img src="img/nabbritboc.jpg" width="215" height="170" alt="Набор для бритья Baxter of california">
             </figure>
             <a href="catalog-item6.html">Набор для бритья "Baxter of california"</a>
-            <ul>
-              <li>
-                3900 руб.
-              </li>
-              <li>
-                <a class="buy buy6" href="#buy6.html">Купить</a>
-              </li>
-            </ul>
+            <div class="price">
+                <p>3900 руб.</p>
+                <a class="price-buy6" href="#buy6.html">Купить</a>
+            </div>
           </article>
         </div>
         <section class="pages">
