Подготовка графики и текстовых стилей «Барбершопа»

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Набор для путешествий "Baxter of california"</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <div class="main-logo">
-          <img src="img/main-logo.png" width="140" height="70" alt="Барбершоп">
+          <img src="img/logo.png" width="111" height="24" alt="Барбершоп">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -30,23 +31,40 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="login" href="#">Вход</a>
+          <a class="login" href="#"><img src="img/.icon-login.png" width="18" height="16" alt="Вход">Вход</a>
         </div>
       </div>
     </header>
     <main class="container">
+      <div class="heading">
+        <h1>Набор для путешествий "Baxter of california"</h1>
+        <ul>
+          <li>
+            <a href="barbershop-index.html">Главная</a>
+          </li>
+          <li>
+            <a href="#barbershop.html">Магазин</a>
+          </li>
+          <li>
+            <a href="#barb.html">Средства для ухода</a>
+          </li>
+          <li>
+            Набор для путешествий "Baxter of california"
+          </li>
+        </ul>
+      </div>
       <section class="item-images">
         <figure class="big-img">
-          <img src="#" width="400" height="300" alt="Набор для путешествий Baxter of california">
+          <img src="img/Layer47copy.jpg" width="460" height="498" alt="Набор для путешествий Baxter of california">
         </figure>
         <figure class="little-img-one">
-          <img src="#" width="100" height="70" alt="Набор Baxter of california 1">
+          <img src="img/Layer45.jpg" width="140" height="149" alt="Набор Baxter of california 1">
         </figure>
         <figure class="little-img-two">
-          <img src="#" width="100" height="70" alt="Набор Baxter of california 2">
+          <img src="img/Layer46.jpg" width="140" height="149" alt="Набор Baxter of california 2">
         </figure>
         <figure class="little-img-three">
-          <img src="#" width="100" height="70" alt="Набор Baxter of california 3">
+          <img src="img/Layer47.jpg" width="140" height="149" alt="Набор Baxter of california 3">
         </figure>
       </section>
       <section class="about">
@@ -61,7 +79,7 @@
         <a class="buy" href="#buy1.html">Купить</a>
       </section>
       <section class="features">
-        <p>В набор входят:</p>
+        <h2>В набор входят:</h2>
           <ul>
             <li>
               Средство для умывания (50 мл)
@@ -91,9 +109,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/v.png" width="25" height="16" alt="Вконтакте"></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/f.png" width="12" height="22" alt="Фейсбук"></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/o.png" width="21" height="21" alt="Инстаграм"></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
