--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Средства для ухода</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <div class="main-logo">
-          <img src="img/main-logo.png" width="140" height="70" alt="Барбершоп">
+          <img src="img/logo.png" width="111" height="24" alt="Барбершоп">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -30,7 +31,7 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="login" href="#">Вход</a>
+          <a class="login" href="#"><img src="img/.icon-login.png" width="18" height="16" alt="Вход">Вход</a>
         </div>
       </div>
     </header>
@@ -52,7 +53,7 @@
       <div class="filter">
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
             <div class="filter-top">
-              <b class="filter-name">Производители:</b><br>
+              <h2 class="filter-name">Производители:</h2>
               <input type="checkbox" name="baxter" id="baxter-id" checked><label for="baxter-id">Baxter of california</label>
               <input type="checkbox" name="mr" id="mr-id"><label for="mr-id">Mr natty</label>
               <input type="checkbox" name="suavecito" id="suavecito-id" checked><label for="suavecito-id">Suavecito</label>
@@ -61,7 +62,7 @@
               <input type="checkbox" name="american" id="american-id" checked><label for="american-id">American crew</label>
             </div>
             <div class="filter-bottom">
-              <b class="filter-name">Группы товаров:</b><br>
+              <h2 class="filter-name">Группы товаров:</h2>
               <input type="radio" name="group" id="group1-id"><label for="group1-id">Бритвенные принадлежности</label>
               <input type="radio" name="group" id="group2-id" checked><label for="group2-id">Средства для ухода</label>
               <input type="radio" name="group" id="group3-id"><label for="group3-id">Аксессуары</label>
@@ -72,7 +73,7 @@
         <div class="catalog">
           <article class="item-one">
             <figure class="item-image">
-              <img src="img/naborboc.jpg" width="215" height="170" alt="Набор для путешествий Baxter of california">
+              <img src="img/Layer38.jpg" width="220" height="165" alt="Набор для путешествий Baxter of california">
             </figure>
             <a href="catalog-item.html">Набор для путешествий "Baxter of california"</a>
             <div class="price">
@@ -82,7 +83,7 @@
           </article>
           <article class="item-two">
             <figure class="item-image">
-              <img src="img/condboc.jpg" width="215" height="170" alt="Увлажняющий кондиционер Baxter of california">
+              <img src="img/Layer30.jpg" width="220" height="165" alt="Увлажняющий кондиционер Baxter of california">
             </figure>
             <a href="catalog-item2.html">Увлажняющий кондиционер "Baxter of california"</a>
             <div class="price">
@@ -92,7 +93,7 @@
           </article>
           <article class="item-three">
             <figure class="item-image">
-              <img src="img/gelsua.jpg" width="215" height="170" alt="Гель для волос Suavecito">
+              <img src="img/Layer39.jpg" width="220" height="165" alt="Гель для волос Suavecito">
             </figure>
             <a href="catalog-item3.html">Гель для волос "Suavecito"</a>
             <div class="price">
@@ -102,7 +103,7 @@
           </article>
           <article class="item-four">
             <figure class="item-image">
-              <img src="img/glinaac.jpg" width="215" height="170" alt="Глина для укладки волос American crew">
+              <img src="img/Layer32.jpg" width="220" height="165" alt="Глина для укладки волос American crew">
             </figure>
             <a href="catalog-item4.html">Глина для укладки волос "American crew"</a>
             <div class="price">
@@ -112,7 +113,7 @@
           </article>
           <article class="item-five">
             <figure class="item-image">
-              <img src="img/gelac.jpg" width="215" height="170" alt="Гель для волос American crew">
+              <img src="img/Layer33.jpg" width="220" height="165" alt="Гель для волос American crew">
             </figure>
             <a href="catalog-item5.html">Гель для волос "American crew"</a>
             <div class="price">
@@ -122,7 +123,7 @@
           </article>
           <article class="item-six">
             <figure class="item-image">
-              <img src="img/nabbritboc.jpg" width="215" height="170" alt="Набор для бритья Baxter of california">
+              <img src="img/Layer42.jpg" width="220" height="165" alt="Набор для бритья Baxter of california">
             </figure>
             <a href="catalog-item6.html">Набор для бритья "Baxter of california"</a>
             <div class="price">
@@ -158,9 +159,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/v.png" width="25" height="16" alt="Вконтакте"></a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/f.png" width="12" height="22" alt="Фейсбук"></a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/o.png" width="21" height="21" alt="Инстаграм"></a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
